        * Fix the bug that integer literal octal natation 0_123 is interpretted as 123, not 0123.
        [SPECIFICATION FIX]
        * "+" just before integer literal is tokenized as an unary operator.
        * C<-> can be at the beginning of integer literal of hex, octet, binary notations.
        
0.9516  2022-05-11
        [CHANGE]
        * Improve symbol name checking.
        * The string literal of the left operand of the fat camma can't contains \"::\"
        * Add no_precompile field to SPVM::Builder::Config::Exe.
        * Add no_compiler_api field to SPVM::Builder::Config::Exe.
        * Add dynamic_lib field to SPVM::Builder::Config::Exe.
        * Add static_lib field to SPVM::Builder::Config::Exe.
        * Add SPVM::Document::NativeMethod document. Native methods of SPVM::Document::NativeAPI is moved to this document.
        * Improve the messages of class name compilation errors.
        * Improve the messages of method name compilation errors.
        * Improve the messages of field name compilation errors.
        [BUG FIX]
        * Fix the bug that local variable can contain "::".
        * Fix the bug that the method name of the method definition can contain "::".
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove "any_object_basic_type_id" native API. ID 155 is reused by "free_env_prepared" native API.
        * Remove "string_basic_type_id" native API. ID 162 is reused by "cleanup_global_vars" native API.

0.9515  2022-05-09
        [CHANGE]
        * Add cloneable_clone to Point class.
        * Point class has Cloneable interface.
        * Interface can have interface statment.
        * Interface type and callback type can be assign to interface type that has the interface.
        * Interface type and callback type can be assign to callback type that has the callback.
        * Allow type cast from interface type to callback type
        * Allow type cast from callback type to interface type