@@ -24,13 +24,10 @@ class TestCase::Lib::Fn1 {
     unless (Fn->sprintf("%d", -123) eq "-123") {
       return 0;
     }
-    warn "AAAAAA";
     unless (Fn->sprintf("%+5d", -123) eq " -123") {
       die "Error";
       return 0;
     }
-    warn "BBBB";
-    
     
     # Invalid type
     {
@@ -47,17 +44,9 @@ class TestCase::Lib::Fn1 {
   }
 
   static method sprintf_u : int () {
-    unless (Fn->sprintf("abc%u", 123) eq "abc123") {
-      return 0;
-    }
-
-    unless (Fn->sprintf("abc%u", 123) eq "abc123") { return 0; }
-    unless (Fn->sprintf("%uabc", 123) eq "123abc") { return 0; }
-    unless (Fn->sprintf("%uabc%u", 1, 10) eq "1abc10") { return 0; }
-    unless (Fn->sprintf("%u%u%u", 1, 10, 100) eq "110100") { return 0; }
+    unless (Fn->sprintf("%u", 123) eq "123") { return 0; }
     unless (Fn->sprintf("%05u", 123) eq "00123") { return 0; }
-    unless (Fn->sprintf("%+5u", 123) eq " +123") { return 0; }
-    unless (Fn->sprintf("%-5u", 123) eq "123  ") { return 0; }
+    unless (Fn->sprintf("%+5u", 123) eq "  123") { return 0; }
     unless (Fn->sprintf("%-5u", 123) eq "123  ") { return 0; }
     unless (Fn->sprintf("%u", -1) eq "4294967295") { return 0; }
 
